tests/ui/macros/compile_error_macro-suppress-errors.stderr
error: Error in a module
  --> $DIR/compile_error_macro-suppress-errors.rs:2:5
   |
LL |     compile_error!("Error in a module");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0433]: failed to resolve: could not find `Hello` in `another_module`
  --> $DIR/compile_error_macro-suppress-errors.rs:22:55
   |
LL |     let _: another_module::SomeType = another_module::Hello::new();
   |                                                       ^^^^^ could not find `Hello` in `another_module`

error[E0425]: cannot find function `some_function` in module `another_module`
  --> $DIR/compile_error_macro-suppress-errors.rs:20:29
   |
LL |     let _ = another_module::some_function();
   |                             ^^^^^^^^^^^^^ not found in `another_module`

error[E0412]: cannot find type `SomeType` in module `another_module`
  --> $DIR/compile_error_macro-suppress-errors.rs:22:28
   |
LL |     let _: another_module::SomeType = another_module::Hello::new();
   |                            ^^^^^^^^ not found in `another_module`

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0412, E0425, E0433.
For more information about an error, try `rustc --explain E0412`.
